Adding target to links

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ $(function() {
 <div id="wrong_browser" class="top_box" style="display: none;">
 </div>
 
-<a id="install" class="top_box" style="display: none;" href="https://chrome.google.com/extensions/detail/encaiiljifbdbjlphpgpiimidegddhic">
+<a target="_top" id="install" class="top_box" style="display: none;" href="https://chrome.google.com/extensions/detail/encaiiljifbdbjlphpgpiimidegddhic">
 Get it!
 </a>
 
@@ -124,25 +124,25 @@ Get it!
     Chromed Bird is an open source Chromium extension that allows you to follow your Twitter account using Google Chrome.
   </p>
   <p>
-    More details in the <a href="http://github.com/cezarsa/chromed_bird">GitHub Project Page</a>.
+    More details in the <a target="_top" href="http://github.com/cezarsa/chromed_bird">GitHub Project Page</a>.
   </p>
   <h1>FAQ</h1>
   <p>
-    <a href="http://wiki.github.com/cezarsa/chromed_bird/faq">Check out the FAQ now.</a>
+    <a target="_top" href="http://wiki.github.com/cezarsa/chromed_bird/faq">Check out the FAQ now.</a>
   </p>
    <h1>Screenshots and users feedback</h1>
    <p>
-    <a href="https://chrome.google.com/extensions/detail/encaiiljifbdbjlphpgpiimidegddhic">Check the extension page in Chrome's gallery.</a>
+    <a target="_top" href="https://chrome.google.com/extensions/detail/encaiiljifbdbjlphpgpiimidegddhic">Check the extension page in Chrome's gallery.</a>
   </p>
   <h1>Compatibility</h1>
   <p>
-    Currently only Beta and Dev channel releases of Google Chrome support extensions. Check <a href="http://dev.chromium.org/getting-involved/dev-channel">Early Access Release Channels</a> for more information.
+    Currently only Beta and Dev channel releases of Google Chrome support extensions. Check <a target="_top" href="http://dev.chromium.org/getting-involved/dev-channel">Early Access Release Channels</a> for more information.
   </p>
   <h1>Contact</h1>
   <p>
     <span class="my_email"></span><br>
-    <a href="http://github.com/cezarsa">http://github.com/cezarsa</a><br>
-    <a href="http://twitter.com/cezarsa">http://twitter.com/cezarsa</a>
+    <a target="_top" href="http://github.com/cezarsa">http://github.com/cezarsa</a><br>
+    <a target="_top" href="http://twitter.com/cezarsa">http://twitter.com/cezarsa</a>
   </p>
 </div>
 
