--- a/options.html
+++ b/options.html
@@ -236,7 +236,9 @@ $(function() {
         <td><input type="checkbox" name="dms_icon"></td>
         <td><canvas name="dms_color" width="19" height="19" class="color_selector"></canvas></td>
       </tr>
-    </table>
+    </table><br>
+    <label for="notification_fade_timeout">On Page Fade Timeout:</label>
+    <input type="text" name="notification_fade_timeout" validator="required,number,positive"><br>
   </fieldset>
 
   <fieldset>
